--- a/src/pages/ProjectsPage.css
+++ b/src/pages/ProjectsPage.css
@@ -11,6 +11,12 @@
 	text-align: center;
 }
 
-.projects-page .projects-container {
+.projects-container {
 	background-color: transparent;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	overflow-x: auto;
 }
