--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,7 +1,7 @@
 .homepage {
 	padding-top: 8%;
 	background-color: white;
-	height: 100vh;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
