completed About Page

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -15,9 +15,9 @@
 }
 
 .project-title {
-	font-size: 1.75rem;
+	font-size: 1.25rem;
 	margin-bottom: 1%;
-	font-family: 'PPNeuBitBold';
+	/* font-family: 'PPNeuBitBold'; */
 }
 
 .project-title a {
