--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -20,3 +20,24 @@
 	flex-wrap: wrap;
 	overflow-x: auto;
 }
+
+.about-image {
+	width: 40%;
+	padding: 2%;
+	padding-top: 3%;
+}
+
+.about-image img {
+	width: 100%;
+}
+
+.about-text {
+	width: 52%;
+	padding: 2%;
+	font-family: 'IBM Plex Sans';
+	padding-top: 3%;
+}
+
+.about-text div {
+	padding: 1.5% 0%;
+}
